# d-space

./: .gitattributes  .gitignore  CHANGELOG.md  D-Space-Mimari-v1.4.docx  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.github/: REPO_STANDARDS.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: DISCOVERY_LOG.md  NEXT_SESSION.md  RELEASE_CHECKLIST.md  THREAT_MODEL.md
e2e/: README.md  onboarding.spec.ts  quick-search.spec.ts  theme-toggle.spec.ts  update-check.spec.ts  view-modes.spec.ts
e2e/fixtures/: tauri-mock.ts
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_user_rules.sql  0003_usn_index.sql
src-tauri/src/duplicate/: mod.rs  scan.rs
src-tauri/src/index/: baseline.rs  delta.rs  mod.rs  persist.rs  usn.rs  watcher.rs
src-tauri/src/locked_file/: detect.rs  mod.rs  owner.rs  vss.rs  vss_pool.rs
src-tauri/src/safe_delete/: mod.rs  rules.rs  scorer.rs  user_rules.rs
src-tauri/src/scan/: cloud.rs  find_first.rs  mft.rs  mod.rs  privilege.rs  tree.rs  walk.rs
src-tauri/src/snapshot/: capture.rs  delta.rs  mod.rs
src-tauri/src/staging/: cross_volume.rs  expiry.rs  mod.rs  ops.rs  permanent.rs  wal.rs  wipe.rs
src-tauri/src/v2/: cloud_backup.rs  ml_scorer.rs  mod.rs  network_scanner.rs  plugin.rs  volume_reader.rs
src-tauri/src/volume/: enumerate.rs  hardware.rs  mod.rs  preflight.rs
src/components/: Bubble.vue  DuplicatePanel.vue  IndexSearchBar.test.ts  IndexSearchBar.vue  InfoButton.vue  LiveSunburst.test.ts  LiveSunburst.vue  LiveSunburst3D.vue  Onboarding.test.ts  Onboarding.vue  ScanProgress.vue  SnapshotPanel.vue  Sunburst.vue  Sunburst3D.vue  Timeline.vue  Treemap.test.ts  Treemap.vue  UpdateNotification.test.ts  UpdateNotification.vue  UserRulesPanel.vue  VolumeSidebar.test.ts  VolumeSidebar.vue
src/locales/: en.json  tr.json
