[package]
name = "dspace"
version = "0.1.0"
description = "D-Space — Windows için akıllı disk analiz ve geri kazanım platformu"
authors = ["D-Space contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/dspace-app/dspace"
edition = "2021"
rust-version = "1.80"

[lib]
name = "dspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
