[package]
name = "dspace"
version = "0.1.0"
description = "D-Space — Windows için akıllı disk analiz ve geri kazanım platformu"
authors = ["D-Space contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/dspace-app/dspace"
edition = "2021"
rust-version = "1.80"

[lib]
name = "dspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ntfs = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
dirs = "5"
blake3 = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
