[package]
name = "dspace"
version = "0.2.0"
description = "D-Space — Windows için akıllı disk analiz ve geri kazanım platformu"
authors = ["D-Space contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/dspace-app/dspace"
edition = "2021"
rust-version = "1.80"

[lib]
name = "dspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ntfs = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
dirs = "5"
blake3 = "1"
rayon = "1"
tract = { version = "0.22", optional = true, default-features = false }
tract-tflite = { version = "0.22", optional = true, default-features = false }

[features]
default = []
# Bölüm 6.5 — TFLite tier'lı ML scorer. tract pure-Rust, ~3-5 MB static.
# Model dosyası `assets/models/safe_delete_v1.tflite` (v0.3 sprint'inde
# eğitilip eklenecek). Build'i ağırlaştırmamak için default kapalı.
ml-tflite = ["dep:tract", "dep:tract-tflite"]
# Bölüm 34.5.4 — VSS (Volume Shadow Copy Service) snapshot pool. Hash-time
# kilitli dosya kurtarma. `windows 0.61` IVssBackupComponents'i sunmuyor;
# bu yüzden `winapi 0.3.9` (vsbackup.h binding'leri sağlar) opsiyonel
# olarak eklenmiştir. Discovery Log #002 — Plan A. Default kapalı çünkü
# COM + MTA + admin gerekleri build/test ortamını ağırlaştırır.
vss = ["dep:winapi"]

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Power",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
# winapi 0.3.9 — yalnızca `vss` feature açıkken çekilir. `IVssBackupComponents`
# vtable + `CreateVssBackupComponents` factory burada mevcut. Discovery Log #002.
winapi = { version = "0.3.9", features = [
    "vsbackup",
    "vss",
    "combaseapi",
    "objbase",
    "oleauto",
    "winerror",
    "handleapi",
    "fileapi",
    "minwindef",
    "guiddef",
    "winnt",
    "ntdef",
], optional = true }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
